--- a/UI/admin-orders.html
+++ b/UI/admin-orders.html
@@ -5,8 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Fast-Food-Fast | All Orders</title>
-  <link rel="stylesheet" href="css/admin.css">
+  <title>Fast-Food-Fast | Orders</title>
+  <link rel="stylesheet" href="css/orders.css">
+  <link rel="icon" type="image/png" href="img/logo.png">
 </head>
 
 <body>
@@ -14,78 +15,146 @@
     <div class="dashboard-menu">
       <div class="menu-top">
         <div class="welcome">
-          <img src="img/logo.png" alt="logo">
-          <span>Fast Food Fast</span>
+          <a href="food-items.html"><img src="img/logo.png" alt="logo"></a>
+          <span><a href="food-items.html">Fast Food Fast</a> </span>
         </div>
-        <div class="menu menu1">Add Food Item</div>
-        <div class="menu menu2">View All Orders</div>
-        <div class="menu menu3">View All Items</div>
+        <a href="add-food-item.html">
+          <div class="menu menu1">Add Item &#10148;</div>
+        </a>
+        <a href="admin-food-items.html">
+          <div class="menu menu1">All Food Items &#10148;</div>
+        </a>
+        <a href="#">
+          <div class="menu menu2">All orders &#10148;</div>
+        </a>
       </div>
       <div class="menu-bottom"></div>
     </div>
     <div class="dashboard-content">
-      <div>
-
+      <div class="dashboard-content-bg">
+        <div class="page-title">FOOD ORDERS LIST</div>
         <div class="orders-list">
           <div class="order-history column-head">
-            <div class="order-column">ID</div>
-            <div class="order-column">Date</div>
-            <div class="order-column">Item</div>
-            <div class="order-column">Category</div>
-            <div class="order-column">Qty</div>
-            <div class="order-column">Cost(#)</div>
-            <div class="order-column">Subtotal(#)</div>
-            <div class="order-column">Freight(#)</div>
-            <div class="order-column">Total(#)</div>
+            <div class="order-column id">ID</div>
+            <div class="order-column date">Date</div>
+            <div class="order-column item">Item</div>
+            <div class="order-column qty">Qty</div>
+            <div class="order-column">Total(&#8358;)</div>
+            <div class="order-column location">Location</div>
+            <div class="order-column">Contact</div>
             <div class="order-column status-col">Status</div>
           </div>
           <div class="order-history order1">
-            <div class="order-column">1</div>
-            <div class="order-column">13-09-2018</div>
-            <div class="order-column">Meet Pie</div>
-            <div class="order-column">Snacks</div>
-            <div class="order-column">3</div>
-            <div class="order-column">1000</div>
-            <div class="order-column">3000</div>
-            <div class="order-column">Yaba- 300</div>
-            <div class="order-column">3300</div>
-            <div class="order-column status">Pending</div>
+            <div class="order-column id">1</div>
+            <div class="order-column date">13-09-2018</div>
+            <div class="order-column item">Meet Pie</div>
+            <div class="order-column qty">5</div>
+            <div class="order-column">5000</div>
+            <div class="order-column location">Sabo Yaba</div>
+            <div class="order-column">08082300954</div>
+            <div class="order-column">
+              <span class="mark-complete">&#10004;</span> &nbsp;
+              <span class="thumbs-up">&#128077;</span> &nbsp;
+              <span class="thumbs-down">&#128078;</span>
+            </div>
           </div>
           <div class="order-history order2">
-            <div class="order-column">2</div>
-            <div class="order-column">13-09-2018</div>
-            <div class="order-column">Rice & Turkey</div>
-            <div class="order-column">Rice</div>
-            <div class="order-column">5</div>
-            <div class="order-column">2000</div>
-            <div class="order-column">10000</div>
-            <div class="order-column">Yaba- 300</div>
-            <div class="order-column">10300</div>
-            <div class="order-column status">Accepted</div>
+            <div class="order-column id">2</div>
+            <div class="order-column date">13-09-2018</div>
+            <div class="order-column item">Rice & Turkey</div>
+            <div class="order-column qty">2</div>
+            <div class="order-column">4000</div>
+            <div class="order-column location">Andela EPIC Tower</div>
+            <div class="order-column">08082300954</div>
+            <div class="order-column">
+              <span class="mark-complete">&#10004;</span> &nbsp;
+              <span class="thumbs-up">&#128077;</span> &nbsp;
+              <span class="thumbs-down">&#128078;</span>
+            </div>
           </div>
-          <div class="order-history">
-            <div class="order-column">3</div>
-            <div class="order-column">13-09-2018</div>
-            <div class="order-column">Pandoyam & Isiewu</div>
-            <div class="order-column">Local</div>
-            <div class="order-column">1</div>
-            <div class="order-column">2000</div>
-            <div class="order-column">2000</div>
-            <div class="order-column">Ikorodu- 500</div>
-            <div class="order-column">2500</div>
-            <div class="order-column status">Declined</div>
+          <div class="order-history order3">
+            <div class="order-column id">3</div>
+            <div class="order-column date">13-09-2018</div>
+            <div class="order-column item">Pandoyam & Isiewu</div>
+            <div class="order-column qty">3</div>
+            <div class="order-column">55000</div>
+            <div class="order-column location">Town Planning, Ilupeju</div>
+            <div class="order-column">08082300954</div>
+            <div class="order-column">
+              <span class="mark-complete">&#10004;</span> &nbsp;
+              <span class="thumbs-up">&#128077;</span> &nbsp;
+              <span class="thumbs-down">&#128078;</span>
+            </div>
           </div>
           <div class="order-history order4">
-            <div class="order-column">4</div>
-            <div class="order-column">13-09-2018</div>
-            <div class="order-column">Sausage</div>
-            <div class="order-column">Snacks</div>
-            <div class="order-column">3</div>
+            <div class="order-column id">4</div>
+            <div class="order-column date">13-09-2018</div>
+            <div class="order-column item">Sausage</div>
+            <div class="order-column qty">3</div>
             <div class="order-column">1000</div>
-            <div class="order-column">3000</div>
-            <div class="order-column">Yaba- #300</div>
-            <div class="order-column">3300</div>
-            <div class="order-column status">Completed</div>
+            <div class="order-column location">200, Ikorodu Road</div>
+            <div class="order-column">08082300954</div>
+            <div class="order-column">
+              <span class="mark-complete">&#10004;</span> &nbsp;
+              <span class="thumbs-up">&#128077;</span> &nbsp;
+              <span class="thumbs-down">&#128078;</span>
+            </div>
+          </div>
+          <div class="order-history order1">
+            <div class="order-column id">5</div>
+            <div class="order-column date">13-09-2018</div>
+            <div class="order-column item">Meet Pie</div>
+            <div class="order-column qty">4</div>
+            <div class="order-column">4000</div>
+            <div class="order-column location">345, Herbart Macaulay</div>
+            <div class="order-column">08082300954</div>
+            <div class="order-column">
+              <span class="mark-complete">&#10004;</span> &nbsp;
+              <span class="thumbs-up">&#128077;</span> &nbsp;
+              <span class="thumbs-down">&#128078;</span>
+            </div>
+          </div>
+          <div class="order-history order2">
+            <div class="order-column id">6</div>
+            <div class="order-column date">13-09-2018</div>
+            <div class="order-column item">Rice & Turkey</div>
+            <div class="order-column qty">2</div>
+            <div class="order-column">2000</div>
+            <div class="order-column location">Town Planning, Ilupeju</div>
+            <div class="order-column">08082300954</div>
+            <div class="order-column">
+              <span class="mark-complete">&#10004;</span> &nbsp;
+              <span class="thumbs-up">&#128077;</span> &nbsp;
+              <span class="thumbs-down">&#128078;</span>
+            </div>
+          </div>
+          <div class="order-history order3">
+            <div class="order-column id">7</div>
+            <div class="order-column date">13-09-2018</div>
+            <div class="order-column item">Pandoyam & Isiewu</div>
+            <div class="order-column qty">8</div>
+            <div class="order-column">2000</div>
+            <div class="order-column location">200, Oshodi/ Apapa</div>
+            <div class="order-column">08082300954</div>
+            <div class="order-column">
+              <span class="mark-complete">&#10004;</span> &nbsp;
+              <span class="thumbs-up">&#128077;</span> &nbsp;
+              <span class="thumbs-down">&#128078;</span>
+            </div>
+          </div>
+          <div class="order-history order4">
+            <div class="order-column id">8</div>
+            <div class="order-column date">13-09-2018</div>
+            <div class="order-column item">Sausage</div>
+            <div class="order-column qty">3</div>
+            <div class="order-column">1000</div>
+            <div class="order-column location">Town Planning, Ilupeju</div>
+            <div class="order-column">08082300954</div>
+            <div class="order-column">
+              <span class="mark-complete">&#10004;</span> &nbsp;
+              <span class="thumbs-up">&#128077;</span> &nbsp;
+              <span class="thumbs-down">&#128078;</span>
+            </div>
           </div>
         </div>
 
@@ -93,104 +162,106 @@
         <div class="order-mobile">
           <div class="order1-mobile mobile">
             <div class="head view">
-              <div class="order-column">ID</div>
-              <div class="order-column">Date</div>
-              <div class="order-column">Item</div>
-              <div class="order-column">Category</div>
-              <div class="order-column">Qty</div>
-              <div class="order-column">Cost(#)</div>
-              <div class="order-column">Subtotal(#)</div>
-              <div class="order-column">Freight(#)</div>
-              <div class="order-column">Total(#)</div>
+              <div class="order-column id">ID</div>
+              <div class="order-column date">Date</div>
+              <div class="order-column item">Item</div>
+              <div class="order-column qty">Qty</div>
+              <div class="order-column">Total(&#8358;)</div>
+              <div class="order-column location">Location</div>
+              <div class="order-column">Contact</div>
               <div class="order-column status-col">Status</div>
             </div>
             <div class="head-content view">
               <div class="order-column">1</div>
               <div class="order-column">13-09-2018</div>
               <div class="order-column">Meet Pie</div>
-              <div class="order-column">Snacks</div>
-              <div class="order-column">3</div>
-              <div class="order-column">1000</div>
-              <div class="order-column">3000</div>
-              <div class="order-column">Yaba- 300</div>
-              <div class="order-column">3300</div>
-              <div class="order-column status">Pending</div>
+              <div class="order-column">5</div>
+              <div class="order-column">5000</div>
+              <div class="order-column">Sabo Yaba</div>
+              <div class="order-column">08082300954</div>
+              <div class="order-column">
+                <span class="mark-complete">&#10004;</span> &nbsp;
+                <span class="thumbs-up">&#128077;</span> &nbsp;
+                <span class="thumbs-down">&#128078;</span>
+              </div>
             </div>
           </div>
           <div class="order2-mobile mobile">
             <div class="head view">
-              <div class="order-column">ID</div>
-              <div class="order-column">Date</div>
-              <div class="order-column">Item</div>
-              <div class="order-column">Category</div>
-              <div class="order-column">Qty</div>
-              <div class="order-column">Cost(#)</div>
-              <div class="order-column">Subtotal(#)</div>
-              <div class="order-column">Freight(#)</div>
-              <div class="order-column">Total(#)</div>
+              <div class="order-column id">ID</div>
+              <div class="order-column date">Date</div>
+              <div class="order-column item">Item</div>
+              <div class="order-column qty">Qty</div>
+              <div class="order-column">Total(&#8358;)</div>
+              <div class="order-column location">Location</div>
+              <div class="order-column">Contact</div>
               <div class="order-column status-col">Status</div>
             </div>
             <div class="head-content view">
               <div class="order-column">2</div>
-            <div class="order-column">13-09-2018</div>
-            <div class="order-column">Rice & Turkey</div>
-            <div class="order-column">Rice</div>
-            <div class="order-column">5</div>
-            <div class="order-column">2000</div>
-            <div class="order-column">10000</div>
-            <div class="order-column">Yaba- 300</div>
-            <div class="order-column">10300</div>
-            <div class="order-column status">Accepted</div>
+              <div class="order-column">13-09-2018</div>
+              <div class="order-column">Rice & Turkey</div>
+              <div class="order-column">2</div>
+              <div class="order-column">4000</div>
+              <div class="order-column">Andela EPIC Tower</div>
+              <div class="order-column">08082300954</div>
+              <div class="order-column">
+                <span class="mark-complete">&#10004;</span> &nbsp;
+                <span class="thumbs-up">&#128077;</span> &nbsp;
+                <span class="thumbs-down">&#128078;</span>
+              </div>
             </div>
           </div>
           <div class="order3-mobile mobile">
             <div class="head view">
-              <div class="order-column">ID</div>
-              <div class="order-column">Date</div>
-              <div class="order-column">Food Item</div>
-              <div class="order-column">Quantity</div>
-              <div class="order-column">Unit Cost</div>
-              <div class="order-column">Sub Total</div>
-              <div class="order-column">Freight</div>
-              <div class="order-column">Total</div>
-              <div class="order-column">Status</div>
+              <div class="order-column id">ID</div>
+              <div class="order-column date">Date</div>
+              <div class="order-column item">Item</div>
+              <div class="order-column qty">Qty</div>
+              <div class="order-column">Total(&#8358;)</div>
+              <div class="order-column location">Location</div>
+              <div class="order-column">Contact</div>
+              <div class="order-column status-col">Status</div>
             </div>
             <div class="head-content view">
               <div class="order-column">3</div>
-            <div class="order-column">13-09-2018</div>
-            <div class="order-column">Pandoyam & Isiewu</div>
-            <div class="order-column">Local</div>
-            <div class="order-column">1</div>
-            <div class="order-column">2000</div>
-            <div class="order-column">2000</div>
-            <div class="order-column">Ikorodu- 500</div>
-            <div class="order-column">2500</div>
-            <div class="order-column status">Declined</div>
+              <div class="order-column">13-09-2018</div>
+              <div class="order-column">Pandoyam & Isiewu</div>
+              <div class="order-column">3</div>
+              <div class="order-column">5500</div>
+              <div class="order-column">Town Planning, Ilupeju</div>
+              <div class="order-column">08082300954</div>
+              <div class="order-column">
+                <span class="mark-complete">&#10004;</span> &nbsp;
+                <span class="thumbs-up">&#128077;</span> &nbsp;
+                <span class="thumbs-down">&#128078;</span>
+              </div>
             </div>
           </div>
           <div class="order4-mobile mobile">
             <div class="head view">
-              <div class="order-column">ID</div>
-              <div class="order-column">Date</div>
-              <div class="order-column">Food Item</div>
-              <div class="order-column">Quantity</div>
-              <div class="order-column">Unit Cost</div>
-              <div class="order-column">Sub Total</div>
-              <div class="order-column">Freight</div>
-              <div class="order-column">Total</div>
-              <div class="order-column">Status</div>
+              <div class="order-column id">ID</div>
+              <div class="order-column date">Date</div>
+              <div class="order-column item">Item</div>
+              <div class="order-column qty">Qty</div>
+              <div class="order-column">Total(&#8358;)</div>
+              <div class="order-column location">Location</div>
+              <div class="order-column">Contact</div>
+              <div class="order-column status-col">Status</div>
             </div>
             <div class="head-content view">
               <div class="order-column">4</div>
               <div class="order-column">13-09-2018</div>
               <div class="order-column">Sausage</div>
-              <div class="order-column">Snacks</div>
-              <div class="order-column">3</div>
-              <div class="order-column">1000</div>
-              <div class="order-column">3000</div>
-              <div class="order-column">Yaba- #300</div>
-              <div class="order-column">3300</div>
-              <div class="order-column status">Completed</div>
+              <div class="order-column">4</div>
+              <div class="order-column">4000</div>
+              <div class="order-column">200, Ikorodu Road</div>
+              <div class="order-column">08082300954</div>
+              <div class="order-column">
+                <span class="mark-complete">&#10004;</span> &nbsp;
+                <span class="thumbs-up">&#128077;</span> &nbsp;
+                <span class="thumbs-down">&#128078;</span>
+              </div>
             </div>
           </div>
         </div>
@@ -200,6 +271,15 @@
 
     </div>
   </div>
+  <div class="scroll-top">&#9652;</div>
+
+  <footer class="footer">
+    &copy; <script>
+      document.write(new Date().getFullYear());
+    </script> <strong>Fast-Food-Fast</strong> developed & designed by <em>Marcdomain</em>
+  </footer>
+
+  <script src="js/scroll.js"></script>
 </body>
 
 </html>
